# KickStart-2019

./: CMakeLists.txt  Parcels.cpp  README.md  Training.cpp
round-C/: a.cpp  b.cpp  c.cpp  c_new.cpp
