CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

PROJECT(KICKSTART-2019)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)

file(GLOB PROBLEMS_SOURCE ${CMAKE_SOURCE_DIR}/*.cpp)
foreach(PROBLEM_SOURCE ${PROBLEMS_SOURCE})
    get_filename_component(PROBLEM_NAME ${PROBLEM_SOURCE} NAME_WE)
    add_executable(${PROBLEM_NAME} ${PROBLEM_SOURCE})
endforeach(PROBLEM_SOURCE ${PROBLEMS_SOURCE})